--- a/index.html
+++ b/index.html
@@ -63,7 +63,16 @@
   <article data-timings="">
     <p><img src="./assets/img/charger.jpg" alt="charger"></p>
 
-<ul>
+  </article>
+  <!-- Presenter Notes -->
+</slide>
+
+<slide class="class" id="id" style="background:;">
+  <hgroup>
+    <h2>Charger Components</h2>
+  </hgroup>
+  <article data-timings="">
+    <ul>
 <li>Module
 
 <ul>
@@ -287,37 +296,37 @@ meter bet. ground and pin2 (the resistor we solderd)</li>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=3 title='Schematics'>
+        data-slide=3 title='Charger Components'>
          3
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=4 title='Initial Tasks'>
+        data-slide=4 title='Schematics'>
          4
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=5 title='Issue: Rating Difference'>
+        data-slide=5 title='Initial Tasks'>
          5
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=6 title='Formula'>
+        data-slide=6 title='Issue: Rating Difference'>
          6
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=7 title='Removing the resistor'>
+        data-slide=7 title='Formula'>
          7
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=8 title='Demo: Removing the existing resistor'>
+        data-slide=8 title='Removing the resistor'>
          8
       </a>
     </li>
@@ -329,7 +338,7 @@ meter bet. ground and pin2 (the resistor we solderd)</li>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=10 title='Demo: Putting in the new resistor'>
+        data-slide=10 title='Demo: Removing the existing resistor'>
          10
       </a>
     </li>
@@ -341,20 +350,26 @@ meter bet. ground and pin2 (the resistor we solderd)</li>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=12 title='Demo: Surface Mount Devices (SMD) Soldering'>
+        data-slide=12 title='Demo: Putting in the new resistor'>
          12
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=13 title='Demo: Verifying if the solderin worked'>
+        data-slide=13 title='Demo: Surface Mount Devices (SMD) Soldering'>
          13
       </a>
     </li>
     <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=14 title=''>
+        data-slide=14 title='Demo: Verifying if the solderin worked'>
          14
+      </a>
+    </li>
+    <li>
+      <a href="#" target="_self" rel='tooltip' 
+        data-slide=15 title=''>
+         15
       </a>
     </li>
   </ul>
