--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@
   <article data-timings="">
     <ul>
 <li>Lithium Ion (7V 150mAH)
-<img src="http://www.adafruit.com/images/1200x900/1317-00.jpg" alt="battery"></li>
+<img src="http://www.airyear.com/images/products2/207532.jpg" alt="battery"></li>
 </ul>
 
-<p>[Click here for Schema of the chip][1]</p>
+<p><a href="http://www.dfrobot.com/image/data/DFR0208/Lithium%20Battery%20%20charger%20SCH.pdf">Click here for Schema of the chip</a></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -156,7 +156,7 @@
 <tr>
 <td><strong>I</strong>(Bat)</td>
 <td>BAT Pin Current</td>
-<td>150mAh / 100mAh</td>
+<td>150mAh or 100mAh</td>
 </tr>
 <tr>
 <td><strong>V</strong>(Prog)</td>
@@ -166,7 +166,7 @@
 <tr>
 <td>R(Prog)</td>
 <td>Resistance</td>
-<td>8/12 kOhm</td>
+<td>8 or 12 kOhm</td>
 </tr>
 </tbody></table>
 
@@ -213,7 +213,8 @@
     <h2>Demo: Removing the existing resistor</h2>
   </hgroup>
   <article data-timings="">
-    <p><img src="./assets/img/notclean.jpg" alt="resistor"></p>
+    <p>Remember to remove the solder from before (image below before removing solder)
+<img src="./assets/img/notclean.jpg" alt="resistor"></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -238,7 +239,7 @@
   </hgroup>
   <article data-timings="">
     <ul>
-<li>Find the resistor, check if ID corresponds to the desired ohms using android app <strong>Electrodroid</strong> (reliable according to Joo Khai)</li>
+<li>Find the resistor, check if ID corresponds to the desired ohms using android app <a href="https://play.google.com/store/apps/details?id=it.android.demi.elettronica&amp;hl=en">Electrodroid</a> (reliable according to Joo Khai)</li>
 </ul>
 
   </article>
@@ -267,8 +268,9 @@
     <h2>Demo: Surface Mount Devices (SMD) Soldering</h2>
   </hgroup>
   <article data-timings="">
-    <p>the finished product
-<img src="./assets/img/new.jpg" alt="resistor"></p>
+    <p>The finished product</p>
+
+<p><img src="./assets/img/new.jpg" alt="resistor"></p>
 
   </article>
   <!-- Presenter Notes -->
@@ -281,7 +283,7 @@
   <article data-timings="">
     <ul>
 <li>verify if the soldering has been accurate:
-multimeter bet. ground and pin2 (resistor we solderd) using the ?signal? mode</li>
+use a multimeter. place the electrodes on ground and pin2 (where our resistor is connected to) using the ?signal? mode</li>
 </ul>
 
   </article>
